# delegates-rs

./: .env.example  .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  rpc.rs  utils.rs
src/contracts/abi/: rocketnetworkvoting.json  rocketnodemanager.json
src/contracts/network/: voting.rs
src/contracts/node/: manager.rs
tests/: lib.rs  rpc.rs  utils.rs
tests/contracts/network/: voting.rs
tests/contracts/node/: manager.rs
