[package]
name = "rocketpool-api"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bigdecimal = "0.4.3"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["rustls"], git = "https://github.com/gakonst/ethers-rs.git", branch = "master" }
color-eyre = "0.6.3"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

